@@ -12,6 +12,8 @@ Pint Changelog
   (PR #1663)
 - Changed frequency to angular frequency in the docs.
   (PR #1668)
+- Fixed Quantity type returned from `__dask_postcompute__`.
+  (PR #1722)
 
 ### Breaking Changes
 
